# basic-rust

./: .env  Cargo.toml  README.md
migrations/2023-04-01-211423_create_post/: up.sql
src/: main.rs  models.rs
