[package]
name = "basic-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
actix-web = "4.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
json = "0.12.4"